20**.**.** -- Version ?

* Security fix: packet length check errors
* fixed droping of priveleges on FreeBSD
* added multi socket support which allows simultanous usage
  of IPv4 and IPv6 even on operating systems without V4_MAPPED
  address support
* added prebuilt manpage to release tarball (less build deps)
	
2009.12.02 -- Version 0.3.2

* added 64bit build target to windows build system
* added install target to build system
* cleaned up manpages
* moved to new svn location

2009.10.28 -- Version 0.3.1 svn852
* switched to GPLv3 or higher
* Changed Windows TAP driver version to support 64-bit windows
* fixed some memory errors
* improved logging
* improved post up script execution
* builds on FreeBSD now

2009.5.1 -- Version 0.3 svn834

* updated to new protocol specification (extended label and crypto role)
  Due to this changes this version is incompatible to version 0.2 and prior
* the auth tag length can now be configured
* added extended logging support (syslog, file stdout and stderr)
* changed -n|--ifconfig parameter to new behavior
  tun and tap devices now use the same syntax
* added seperate resolver thread
* fixed packet length errors
* dropping privileges is now possible wihtout chroot
* full ipv6 support
 - ipv6 multiple connection routing
 - syncronisation over ipv6
 - 4in6,6in6 tunnels
* replaced several dependencies with boost libs
* ported basic functionality to Windows
* dropped OpenBSD Port due to multi threading issues
* code cleanup

2008.6.20 -- Version 0.2.1svn556

* finished own tun/tap devices and removed openvpn source code
  currently there are tun/tap devices for Linux, FreeBSD, OpenBSD
  and NetBSD
* several fixes for building on OpenBSD
* added manpages for all binaries
* switched to GPLv3

2008.4.12 -- Version 0.2svn490

* updated to Internet Draft Revision 02
  Mind that the this version is incompatible to version 0.1
  However this is only the case if you use encryption. There
  shouldn't be any Problem with NULL cipher