@@ -179,6 +179,7 @@ distclean: cleanall
 	find . -name *.o -exec rm -f {} \;
 	rm -f config.sub config.guess
 	rm -f signalHandler.hpp
+	rm -f sysExec.hpp
 	rm -f version.h
 	rm -f tunDevice.cpp
 	rm -f include.mk
